# room-connect-ecr

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: code-style.mdc  git-workflow.mdc  project-overview.mdc  tech-stack.mdc
.github/actions/setup-aws-ecr/: action.yaml
.github/workflows/: copilot-setup-steps.yml  on_merge.yaml  on_pr.yaml
backend/: Dockerfile  app.py  requirements.txt
backend/rendering/: cycles_renderer.py
docs/: PHASE_2_POR.md  PHASE_2_POR_AUTO_CAMERA_PLACEMENT.md  PHASE_2_POR_CAMERA_FIXES.md  PHASE_2_POR_RENDERING_GLB_UPLOAD.md  POR_ECR_K8S_DEPLOYMENT.md  POR_EEVEE_DEPTHMAPS.md  POR_HOT_SWAP_GLB.md  POR_K8S_TESTING.md  POR_MERGE_OOBBS.md  POR_OBJECT_CONNECTIONS.md  POR_RENDER_FEATURES_AND_FIXES.md  POR_SSE_STREAMING_FIX.md  POR_UI_SLIDER_FIXES.md  POR_UPLOAD_OPTIMIZATION.md  POST_MORTEM.md  USER_GUIDE.md
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CameraFrustum.jsx  DrawingVolume.jsx  EditingVolume.jsx  OOBBOverlay.jsx  ObjectDetectionPanel.jsx  RenderingPanel.jsx  SceneViewer.jsx  Toolbar.jsx  VolumeBox.jsx  VolumeDialog.jsx  VolumeList.jsx
frontend/src/styles/: App.css
frontend/src/utils/: cameraPlacement.js  objectDetection.js  sceneUpload.js
k8s/: deployment.yaml  service.yaml
src/room_connect/: __init__.py  editor.py  graph.py  volume.py
src/room_connect/viz/: __init__.py  (+1 more)
tests/: test_editor.py  test_graph.py  test_volume.py
