[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "room-connect"
version = "0.1.0"
description = "An interactive 3D volume connectivity editor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "pyvista>=0.43",
    "nibabel>=5.2",
    "h5py>=3.10",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/room_connect"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=room_connect --cov-report=term-missing"
